--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <meta name="theme-color" content="#ffffff" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" />
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
 
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" as="style"
@@ -33,13 +33,13 @@
         this.rel = 'stylesheet';
       " />
   <noscript>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   </noscript>
 
-  <link rel="stylesheet" href="./output.css" />
+  <link rel="stylesheet" href="./styles/output.css" />
 </head>
 
-<body class="flex flex-col min-h-screen bg-white text-gray-800 font-['Oswald']">
+<body class="flex flex-col min-h-screen bg-white text-gray-800">
   <!-- Main content -->
   <main class="flex-grow max-w-7xl mx-auto px-4 py-12 flex flex-wrap gap-y-10 items-start">
     <!-- Logo -->
